--- a/startup-generator.html
+++ b/startup-generator.html
@@ -2,10 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+    body {
+      padding: 10%;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      border-bottom: 2px dotted teal;
+      color: teal;
+    }
+    p {
+      font-size: 1.5em;
+    }
+    span {
+      color: teal;
+    }
+    </style>
     <script src="startup-generator.js"></script>
     <title></title>
   </head>
   <body>
+    <h1>It's brilliant!</h1>
     <p id="idea"></p>
   </body>
 </html>
